--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@braces/tslint-config",
   "version": "0.0.2",
   "description": "custom tslint config",
-  "main": "index.js",
+  "main": "tslint.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "patch-release": "npm version patch && npm publish --access=public && git push --follow-tags",
