package name change

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@braces/tslint-config",
+  "name": "@dock365/tslint-config",
   "version": "0.3.1",
   "description": "custom tslint config",
   "main": "tslint.js",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/codebraces/tslint-config.git"
+    "url": "git+https://github.com/dock365/tslint-config.git"
   },
   "keywords": [
     "tslint"
@@ -19,9 +19,9 @@
   "author": "Hafeez Hamza <hafeez1042@gmail.com> (http://hafeezhamza.com)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/codebraces/tslint-config/issues"
+    "url": "https://github.com/dock365/tslint-config/issues"
   },
-  "homepage": "https://github.com/codebraces/tslint-config#readme",
+  "homepage": "https://github.com/dock365/tslint-config#readme",
   "peerDependencies": {
     "tslint": "^5.9.0"
   },
